...
            ],
          ),
          child: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              Text(
                "Selecciona una opción:",
                style: TextStyle(
                  fontSize: 22,
                  fontWeight: FontWeight.bold,
                  color: kButtonTextColor,
                ),
              ),
              const SizedBox(height: 20),
              _buildMenuButton(context, "📍 Ver Mapa de Reportes", Icons.map, const MapScreen()),
              _buildMenuButton(context, "🐾 Reportar un Perro Perdido", Icons.pets, const ReportLostDogScreen()),
              _buildMenuButton(context, "🔍 Buscar un Perro Perdido", Icons.search, const SearchLostDogScreen()),
              _buildMenuButton(context, "📋 Mis Reportes", Icons.article, const MyReportsScreen()),
              _buildMenuButton(context, "📊 Dashboard", Icons.bar_chart, const DashboardScreen()),
              _buildMenuButton(
                context,
                "🚪 Cerrar Sesión",
...
