...
                    borderRadius: BorderRadius.circular(20),
                  ),
                ),
                onPressed: isLoading ? null : authenticate,
                child: isLoading
                    ? const CircularProgressIndicator(color: Colors.white)
                    : Text(isLogin ? 'Iniciar Sesión' : 'Registrarse'),
              ),
              const SizedBox(height: 10),
              TextButton(
                onPressed: isLoading ? null : resetPassword,
                child: const Text("¿Olvidaste tu contraseña?"),
              ),
...
